<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ultra Planner</string>
    <string name="title_section1">Alarms</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="New">New</string>
    <string name="action_settings">Settings</string>
    <string name="action_settingsalarm">Alarm Settings</string>
    <string name="alarms">Alarms</string>
    <string name="calandar">Calendar</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="devices">Devices</string>
    <!--new alarm dialog bassed strings-->
    <string name="profile">Profile</string>
    <string name="profilesub">assign to profile</string>
    <string name="base">Base</string>
    <string name="basesub">base configuration template</string>
    <string name="advanced">Advanced</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeatevery">Repeat every</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="other">other</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="only">Only</string>
    <string name="all">All</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_">default</string>
    <string name="volume">volume</string>
    <string name="increasing">Increasing</string>
    <string name="increasefrom">from %1$s to %2$s</string>
    <string name="ringinsilent">Ring in silent</string>
    <string name="ringinvib">Ring in vibrate</string>
    <string name="priority">Priority</string>
    <string name="prioritysub">Choose a type of calendar event to not ring during</string>
    <string name="prioritysubvaule">Will not ring during %1$s</string>
    <string name="cuttoff">...</string>
    <string name="and">and</string>
    <string name="Chooseringtone">Choose ringtone</string>
    <string name="fromfile">from file</string>
    <string name="frompreset">from preset</string>
    <string name="alarmtitle">Alarm Name</string>
    <string name="deleteondismiss">Delete on dismiss</string>
    <string name="name">Name</string>
    <string name="notOnWorkDays">Important event override</string>
    <string name="notOnWorkDaysSubText">Repeated event will not ring during scheduled periods</string>
    <string name="customRepeat">Custom repeat options</string>
    <string name="updateAlarm">Update</string>
    <string name="deleteAlarm">Delete</string>
    <string name="cancelAlarm">Cancel</string>
    <string name="ringtoneLength">Ringtone length</string>
    <string name="ringtoneVolume">Ringtone volume</string>
    <string name="snooze">Snooze</string>
    <string name="snoozeLength">Snooze length</string>
    <string name="mins">mins</string>
    <string name="snoozeNum">Number of snoozes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>
